--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-spring.profiles.active=@spring.profiles.active@
-#spring.profiles.active=prod
+api.document.ThoiKhoaBieuSinhVien=/opt/tomcat/webapps/ROOT/WEB-INF/classes/ThoiKhoaBieuSinhVien.xlsx
